--- a/templates/Video/upload.html
+++ b/templates/Video/upload.html
@@ -16,7 +16,10 @@
         태그 : {{ form.tag }}
     </div>
     <div>
-        업로드할 내용 : {{ form.file }}
+        썸네일 : {{ form.file }}
+    </div>
+    <div>
+        동영상파일 : {{ form.file2 }}
     </div>
 
     <button type="submit">Upload</button>
