--- a/templates/Video/update.html
+++ b/templates/Video/update.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form  method = "post">
+    <form  method = "post" enctype="multipart/form-data" novalidate>
         {% csrf_token %}
         {{videoForm}}
         <input type = 'submit'>
