--- a/templates/Video/read.html
+++ b/templates/Video/read.html
@@ -2,35 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>upload_read</title>
 
     <style>
       video { width : 300; display: block; margin: 20px auto; }
-
-
     </style>
 </head>
 <body>
-    {% if read %}   <!--read안에 데이터가 담겨 있으면 반복문을 실행한다. -->
-              <div>
-                <tr>
-                  <td> {{read.id}} </td>  <!--read라는 객체 안에 있는 id를 보여준다 -->
-                  <td> {{read.title }} </td>
-<!--                  <td> {{read.file}}  </td>-->
-                    <td> {{read.tag}}  </td>
-                  <td> {{read.create_date }}  </td>
-                </tr>
-                  </div>
-            <div>
-                  <tr>
-                       <video height="500" controls poster="/media/{{ read.file }}">
-      <source src="/media/{{ read.file2 }}" type="video/mp4">
-      <strong>Your browser does not support the video tag.</strong>
-    </video>
-                    </tr>
-              </div>
+<a href="/Video/list">
+    <button> 목록으로가기</button>
+</a>
+
+
+
+{% if read %}   <!--read안에 데이터가 담겨 있으면 반복문을 실행한다. -->
+<table>
+    <div>
+        <thead>
+        <tr>
+<!--            <td> {{read.id}}</td>  &lt;!&ndash;read라는 객체 안에 있는 id를 보여준다 &ndash;&gt;-->
+            <td> {{read.title }}</td>
+            <!--                  <td> {{read.file}}  </td>-->
+            <td> {{read.tag}}</td>
+            <td> {{read.create_date }}</td>
+        </tr>
+        </thead>
+    </div>
+    <div>
+        <tr>
+            <video height="500" controls poster="/media/{{ read.file }}">
+                <source src="/media/{{ read.file2 }}" type="video/mp4">
+                <strong>Your browser does not support the video tag.</strong>
+            </video>
+        </tr>
+    </div>
 
     {% endif %}
+
+</table>
 
 
 </body>
