--- a/templates/Video/upload.html
+++ b/templates/Video/upload.html
@@ -3,18 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script>
+
+
+
+    </script>
+
 </head>
 <body>
 
-<form  action = "/Video/upload" method="post" enctype="multipart/form-data" novalidate>
+<form action="/Video/upload" method="post" enctype="multipart/form-data" novalidate>
     {% csrf_token %}
-<!--&lt;!&ndash;    {{ form.title }}&ndash;&gt;  하나씩 뽑아오기-->
+    <!--&lt;!&ndash;    {{ form.title }}&ndash;&gt;  하나씩 뽑아오기-->
     <div>
         제목 : {{ form.title }}
     </div>
-    <div>
-        태그 : {{ form.tag }}
-    </div>
+
+<!--                태그 : {{form.tag}}-->
+    <select onchange="selectBoxChange(this.value);">
+  <option value="음악">음악</option>
+  <option value="예능">예능</option>
+  <option value="자연">자연</option>
+  <option value="학습">학습</option>
+</select>
+<!--    <select name="items1" id="tag">-->
+<!--        <option value="1">음악</option>-->
+<!--        <option value="2">예능</option>-->
+<!--        <option value="3">자연</option>-->
+<!--        <option value="4">학습</option>-->
+<!--    </select>-->
+
+
+
+
     <div>
         썸네일 : {{ form.file }}
     </div>
@@ -23,6 +44,39 @@
     </div>
 
     <button type="submit">Upload</button>
+
+
+
+
 </form>
+
+
+<script>
+    function selectBoxChange(value) {
+        var httpRequest = new XMLHttpRequest();
+        httpRequest.onreadystatechange = function()
+            {
+                if (httpRequest.readyState == XMLHttpRequest.DONE && httpRequest.status == 200 )
+                    {
+                        var json = JSON.parse(httpRequest.responseText);
+                        console.log(json['message']);
+<!--                        if (json['message'] == 'value') {-->
+
+
+
+<!--                        }-->
+
+
+
+                    }
+
+            };
+
+        httpRequest.open("GET", "/Video/tag/" + value , true);
+        httpRequest.send();
+        console.log(value);
+        return value;
+    }
+</script>
 
 </body>
