--- a/templates/Video/upload.html
+++ b/templates/Video/upload.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,13 +20,13 @@
         제목 : {{ form.title }}
     </div>
 
-<!--                태그 : {{form.tag}}-->
-    <select onchange="selectBoxChange(this.value);">
-  <option value="음악">음악</option>
-  <option value="예능">예능</option>
-  <option value="자연">자연</option>
-  <option value="학습">학습</option>
-</select>
+                태그 : {{form.tag}}
+<!--    <select onchange="selectBoxChange(this.value);">-->
+<!--  <option value="음악">음악</option>-->
+<!--  <option value="예능">예능</option>-->
+<!--  <option value="자연">자연</option>-->
+<!--  <option value="학습">학습</option>-->
+<!--</select>-->
 <!--    <select name="items1" id="tag">-->
 <!--        <option value="1">음악</option>-->
 <!--        <option value="2">예능</option>-->
