--- a/templates/Video/list.html
+++ b/templates/Video/list.html
@@ -1,60 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>list</title>
-</head>
-<body>
+{% extends 'layout/base.html' %}
+{% block content %}
+{% load static %}
 
-<div>
-    <a href="http://localhost:8000/Video/list"> 홈버튼 </a>
-</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 
 <div class="container">
-    <div>
-        <div>
-            <a href="http://localhost:8000/Video/list/music"> 음악</a>
-        </div>
-        <div>
-            <a href="http://localhost:8000/Video/list/var"> 예능</a>
-        </div>
-        <div>
-            <a href="http://localhost:8000/Video/list/geo"> 자연</a>
-        </div>
-        <div>
-            <a href="http://localhost:8000/Video/list/edu"> 학습</a>
-        </div>
+
+    <div class="search" >
+      <input type="text" placeholder="검색어를 입력해주세요.">
+      <input type="button" value="검색">
     </div>
+    <br>
 
-    <table>
-        <thead>
-        <div>
 
-            <th> 번호</th>
-            <th> 파일</th>
-            <th> 제목</th>
-            <th> 태그</th>
+    <select onchange="test(this.value);">
+        <option value="선택전">선택전</option>
+        <option value="음악">음악</option>
+        <option value="예능">예능</option>
+        <option value="자연">자연</option>
+        <option value="학습">학습</option>
+    </select>
 
-            <th> 작성시간</th>
 
-        </div>
-        </thead>
+
+    <br>
+    <br>
+    <div>
+
         {% if posts %}
         {% for post in posts %}
         <div>
 
-            <div>
-                <td> {{ post.id}}</td>
-                <td><a href="http://localhost:8000/Video/read/{{ post.id }}"> <img src="/media/{{post.file}} "
-                                                                                   width="100"> </a></td>
+            <div class="videobox">
+                <!--                <tbody>-->
+                <div> {{ post.id}}</div>
+                <div><a href="http://localhost:8000/Video/read/{{ post.id }}"> <img src="/media/{{post.file}} "
+                                                                                    width="300" > </a></div>
 
-                <td> {{ post.title}}</td>
-                <td> {{ post.tag }}</td>
+                <div> {{ post.title}}</div>
+                <div> {{ post.tag }}</div>
 
 
-                <td>{{ post.create_date }}</td>
+                <div>{{ post.create_date }}</div>
+                <!--                </tbody>-->
+                <br>
+                <br>
             </div>
 
         </div>
@@ -82,10 +81,23 @@
         <!--        </div>-->
         {% endif %}
 
-    </table>
-
+        <!--    </table>-->
+    </div>
 
     <script>
+  function test(value) {
+        if (value==='음악') {
+            location.href='/Video/list/music';
+        } else if (value==='예능') {
+            location.href='/Video/list/var';
+        } else if (value==='자연') {
+            location.href='/Video/list/geo';
+        } else if (value==='학습') {
+            location.href='/Video/list/edu';
+        }
+
+    }
+
 
 
     </script>
@@ -93,6 +105,4 @@
 
 </div>
 
-
-</body>
-</html>
+{% endblock %}
