--- a/templates/Video/read.html
+++ b/templates/Video/read.html
@@ -1,46 +1,195 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>upload_read</title>
-
-    <style>
-      video { width : 300; display: block; margin: 20px auto; }
-    </style>
-</head>
-<body>
-<a href="/Video/list">
-    <button> 목록으로가기</button>
-</a>
+{% extends 'layout/base.html' %}
+{% block content %}
+{% load static %}
 
 
 
-{% if read %}   <!--read안에 데이터가 담겨 있으면 반복문을 실행한다. -->
-<table>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="container">
+<div>
+    <a href="/Video/list">
+        <button> 목록으로가기</button>
+    </a>
+</div>
+
+<div class="video">
     <div>
-        <thead>
-        <tr>
-<!--            <td> {{read.id}}</td>  &lt;!&ndash;read라는 객체 안에 있는 id를 보여준다 &ndash;&gt;-->
-            <td> {{read.title }}</td>
-            <!--                  <td> {{read.file}}  </td>-->
-            <td> {{read.tag}}</td>
-            <td> {{read.create_date }}</td>
-        </tr>
-        </thead>
+        {% if read %}   <!--read안에 데이터가 담겨 있으면 반복문을 실행한다. -->
+        <table>
+            <thead>
+            <tr>
+                <!--            <td> {{read.id}}</td>  &lt;!&ndash;read라는 객체 안에 있는 id를 보여준다 &ndash;&gt;-->
+                <td> {{read.title }}</td>
+                <!--                  <td> {{read.file}}  </td>-->
+                <td> {{read.tag}}</td>
+                <td> {{read.create_date }}</td>
+            </tr>
+            </thead>
+
+            <tr>
+                <video height="500" controls poster="/media/{{ read.file }}">
+                    <source src="/media/{{ read.file2 }}" type="video/mp4">
+                    <strong>Your browser does not support the video tag.</strong>
+                </video>
+            </tr>
+        </table>
+        {% endif %}
     </div>
     <div>
-        <tr>
-            <video height="500" controls poster="/media/{{ read.file }}">
-                <source src="/media/{{ read.file2 }}" type="video/mp4">
-                <strong>Your browser does not support the video tag.</strong>
-            </video>
-        </tr>
+
+        <div>
+            <td>
+                프로필
+            </td>
+            <td>
+                아이디
+            </td>
+            <td>
+                댓글작성시간
+            </td>
+            </div>
+        <div>
+            <td>
+                프로필
+            </td>
+            <td>
+                아이디
+            </td>
+            <td>
+                댓글작성시간
+            </td>
+            </div>
+        <div>
+            <td>
+                프로필
+            </td>
+            <td>
+                아이디
+            </td>
+            <td>
+                댓글작성시간
+            </td>
+            </div>
+        <div>
+            <td>
+                프로필
+            </td>
+            <td>
+                아이디
+            </td>
+            <td>
+                댓글작성시간
+            </td>
+            </div>
+
+
+
     </div>
 
-    {% endif %}
 
-</table>
+</div>
+
+<div class="list_video">
+    <div>
+        <div>유사한 영상</div>
+        <br>
+        {% if posts %}
+        {% for post in posts %}
+        {% if post.tag == read.tag %}
+        <div>
+
+            <div>
+                <td> {{ post.id}}</td>
+                <td><a href="http://localhost:8000/Video/read/{{ post.id }}"> <img src="/media/{{post.file}} "
+                                                                                   width="100"> </a></td>
+
+                <td> {{ post.title}}</td>
+                <td> {{ post.tag }}</td>
 
 
-</body>
-</html>
+                <td>{{ post.create_date }}</td>
+            </div>
+
+        </div>
+        <tr>
+            <!--            {% if request.user == read.writer %}-->
+            <!--            <td>-->
+            <!--                <a href="/board/update/{{read.id}}">-->
+            <!--                    <button> 수정</button>-->
+            <!--                </a>-->
+            <!--            </td>  &lt;!&ndash;read라는 객체 안에 있는 id를 보여준다 &ndash;&gt;-->
+            <!--            <td>-->
+            <!--                <a href="/board/delete/{{read.id}}">-->
+            <!--                    <button> 삭제</button>-->
+            <!--                </a>-->
+            <!--            </td>-->
+            <!--            {% endif %}-->
+        </tr>
+        {% endif %}
+        {% endfor %}
+        <!--        <div>-->
+        <!--            <a href="http://localhost:8000/Video/upload">-->
+        <!--                <button> 영상 추가</button>-->
+        <!--            </a>-->
+        <!--        </div>-->
+        {% endif %}
+    </div>
+    <br>
+    <div>
+        <div> 다른 영상 </div>
+        <br>
+        {% if posts %}
+        {% for post in posts %}
+        {% if post.tag != read.tag %}
+        <div>
+
+            <div>
+                <td> {{ post.id}}</td>
+                <td><a href="http://localhost:8000/Video/read/{{ post.id }}"> <img src="/media/{{post.file}} "
+                                                                                   width="100"> </a></td>
+
+                <td> {{ post.title}}</td>
+                <td> {{ post.tag }}</td>
+
+
+                <td>{{ post.create_date }}</td>
+            </div>
+
+        </div>
+        <tr>
+            <!--            {% if request.user == read.writer %}-->
+            <!--            <td>-->
+            <!--                <a href="/board/update/{{read.id}}">-->
+            <!--                    <button> 수정</button>-->
+            <!--                </a>-->
+            <!--            </td>  &lt;!&ndash;read라는 객체 안에 있는 id를 보여준다 &ndash;&gt;-->
+            <!--            <td>-->
+            <!--                <a href="/board/delete/{{read.id}}">-->
+            <!--                    <button> 삭제</button>-->
+            <!--                </a>-->
+            <!--            </td>-->
+            <!--            {% endif %}-->
+        </tr>
+        {% endif %}
+        {% endfor %}
+        <!--        <div>-->
+        <!--            <a href="http://localhost:8000/Video/upload">-->
+        <!--                <button> 영상 추가</button>-->
+        <!--            </a>-->
+        <!--        </div>-->
+        {% endif %}
+
+    </div>
+</div>
+</div>
+
+{% endblock %}
