--- a/templates/Video/update.html
+++ b/templates/Video/update.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'layout/base.html' %}
+{% block content %}
+{% load static %}
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
     <form  method = "post" enctype="multipart/form-data" novalidate>
         {% csrf_token %}
         {{videoForm}}
@@ -13,5 +21,4 @@
 
 
     </form>
-</body>
-</html>
+{% endblock %}
