--- a/templates/Video/upload.html
+++ b/templates/Video/upload.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script>
+{% extends 'layout/base.html' %}
+{% block content %}
+{% load static %}
 
-
-
-    </script>
-
-</head>
-<body>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 <form action="/Video/upload" method="post" enctype="multipart/form-data" novalidate>
     {% csrf_token %}
@@ -18,22 +19,42 @@
     <div>
         제목 : {{ form.title }}
     </div>
+    <div>
+        태그 :
+        <div>
+            <select onchange="selectBoxChange({{ form.tag }});">
+                <option {{ form.tag }} 음악 </option>
+                <option {{ form.tag }} 예능 </option>
+                <option {{ form.tag }} 자연 </option>
+                <option {{ form.tag }} 학습 </option>
+            </select>
 
-                태그 : {{form.tag}}  태그는 음악,예능,자연,학습만 입력해주세요
-<!--    <select onchange="selectBoxChange(this.value);">-->
-<!--  <option value="음악">음악</option>-->
-<!--  <option value="예능">예능</option>-->
-<!--  <option value="자연">자연</option>-->
-<!--  <option value="학습">학습</option>-->
-<!--</select>-->
-<!--    <select name="items1" id="tag">-->
-<!--        <option value="1">음악</option>-->
-<!--        <option value="2">예능</option>-->
-<!--        <option value="3">자연</option>-->
-<!--        <option value="4">학습</option>-->
+<!--                <select onchange="selectBoxChange(this.value);">-->
+<!--      <option value="음악">음악</option>-->
+<!--      <option value="예능">예능</option>-->
+<!--      <option value="자연">자연</option>-->
+<!--      <option value="학습">학습</option>-->
 <!--    </select>-->
 
 
+        </div>
+        <a>태그는 음악,예능,자연,학습만 입력해주세요</a>
+
+    </div>
+
+
+<!--        <select onchange="selectBoxChange(this.value);">-->
+<!--      <option value="음악">음악</option>-->
+<!--      <option value="예능">예능</option>-->
+<!--      <option value="자연">자연</option>-->
+<!--      <option value="학습">학습</option>-->
+<!--    </select>-->
+    <!--    <select name="items1" id="tag">-->
+    <!--        <option value="1">음악</option>-->
+    <!--        <option value="2">예능</option>-->
+    <!--        <option value="3">자연</option>-->
+    <!--        <option value="4">학습</option>-->
+    <!--    </select>-->
 
 
     <div>
@@ -43,40 +64,47 @@
         동영상파일 : {{ form.file2 }}
     </div>
 
-    <button type="submit">Upload</button>
-
-
+    <button type="submit" onclick="check">Upload</button>
 
 
 </form>
 
 
 <script>
-    function selectBoxChange(value) {
-        var httpRequest = new XMLHttpRequest();
-        httpRequest.onreadystatechange = function()
-            {
-                if (httpRequest.readyState == XMLHttpRequest.DONE && httpRequest.status == 200 )
-                    {
-                        var json = JSON.parse(httpRequest.responseText);
-                        console.log(json['message']);
-<!--                        if (json['message'] == 'value') {-->
+
+<!--    function selectBoxChange(value) {-->
+<!--        var httpRequest = new XMLHttpRequest();-->
+<!--        httpRequest.onreadystatechange = function()-->
+<!--            {-->
+<!--                if (httpRequest.readyState == XMLHttpRequest.DONE && httpRequest.status == 200 )-->
+<!--                    {-->
+<!--                        var json = JSON.parse(httpRequest.responseText);-->
+<!--                        console.log(json['message']);-->
 
 
 
-<!--                        }-->
+<!--                    }-->
+
+<!--            };-->
+
+<!--        httpRequest.open("GET", "/Video/tag/" + value , true);-->
+<!--        httpRequest.send();-->
+<!--        console.log(value);-->
+
+<!--    }-->
 
 
 
-                    }
 
-            };
 
-        httpRequest.open("GET", "/Video/tag/" + value , true);
-        httpRequest.send();
-        console.log(value);
-        return value;
-    }
+
+
+
+
+
+
+
+
 </script>
 
-</body>
+{% endblock %}
